Popup: Don't transpose bounds based on contentOrientation

Amends d0fcada55fd4d4a64d18d802c25db39c64c39ea5, which determined that
changing contentOrientation should not rotate/transpose anything but
missed this little case in qquickpopuppositioner.cpp

Change-Id: Iacdac9674b2dccebefd60fbd176a1ce18d042a8b
Fixes: QTBUG-123114
Task-number: QTBUG-115536
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 7169e3f1f452b8e2f2810ba6d1dee3106bbf4d8a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>